...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routineManageBasicDescriptionTxt"
        tools:ignore="UnusedAttribute"
        tools:listitem="@android:layout/list_content" />

    <ImageButton
        android:id="@+id/routineEditCommitBtn"
        style="@style/ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/add_routine"
...
